Fix spacing around freenode logo in jumbotron
Adds more spacing for sm and md screens
closes #464

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -202,6 +202,11 @@ img {
     margin-right: -10px;
 }
 
+@media (--max-md) {
+    margin-left: -5px;
+    margin-right: -5px;
+}
+
 /* main */
 .container {
     width: 100%;
